# AutoCheckBJMF

./: .gitignore  README.md  SetAutoStart.bat  checkin_now.ps1  config.example.json  config_wizard.bat  install.bat  main.py  make_config.py  pyproject.toml  start_checkin.bat
src/: banner.py  constants.py  main.py  make_config.py  once.py
