[project]
name = "autocheck-bjmf"
version = "0.1.0"
description = "班级魔方 GPS 自动签到工具，支持多账号、多班级、多定位点、定时签到"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "drissionpage>=4.1.1.2",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.1.1",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "schedule>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
